Fix form-range components on old Chrome and fix dropdown and header-option-group on small device.

--- a/src/components/_dropdown.scss
+++ b/src/components/_dropdown.scss
@@ -42,4 +42,9 @@
 			opacity: 1;
 		}
 	}
+
+	.#{$prefix}dropdown-menu:active {
+		display: block;
+		opacity: 1;
+	}
 }
